<resources>
    <string name="app_name">Savvy</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="create_account">¿Aún no tienes cuenta?</string>
    <string name="create_account_text">Crear una cuenta</string>
    <string name="inventory">Inventario</string>
    <string name="add_product">Agregar un nuevo producto</string>
    <string name="search_product">Buscar un producto</string>
    <string name="providers">Proveedores</string>
    <string name="home_title">Inicio</string>
    <string name="about_title">Acerca de la aplicación</string>
    <string name="providers_title">Proveedores</string>
    <string name="register_title">Registro</string>

    <string name="acerca_de"><a href="https://danielavillamar.wixsite.com/savvy">Acerca De</a></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="username_text">Nombre de usuario</string>
    <string name="companyname_text">Nombre de la empresa</string>
    <string name="email_text">Correo electrónico</string>
    <string name="password_text">Contraseña</string>
    <string name="register_button_text">Registrarse</string>
    <string name="addname">Nombre del producto</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="provider">Proveedor</string>
    <string name="addProduct">Agregar</string>
    <string name="currentQuantity">Producto disponible</string>
    <string name="edit_product">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="provider_name">Nombre del proveedor</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="search">Search</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
</resources>
