<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        style="@style/back_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/inventory_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:height="@dimen/button_size"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/inventory"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/search_button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:height="@dimen/button_size"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/providers"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_producto_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:height="@dimen/button_size"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/add_product"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_provider_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:height="@dimen/button_size"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/bubblegum_sans"
            android:text="AGREGAR UN NUEVO PROVEEDOR"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>
</layout>
